--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "fosphatic/uikit3-theme-one",
+    "name": "pk-uikit3-theme-one",
     "type": "pagekit-theme",
     "version": "1.0.0",
     "title": "UIKit3 One",
